styles/globals.css
@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;700;900&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Orbitron&display=swap");

@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@layer components {
  html {
    @apply scroll-smooth;
  }
  body {
    @apply bg-black;
  }
  /*
  body::after {
    @apply fixed bottom-5 left-5 z-50 rounded-xl bg-gray-900 p-[20px] text-gray-50  content-['sm'] md:content-['md'] lg:content-['lg'] xl:content-['xl'] 2xl:content-['2xl'];
  }
*/
  header {
    @apply h-[50px] w-full;
  }

  section {
    @apply relative pt-20 pb-20;
  }

  footer {
    @apply pt-20 pb-5;
  }

  h1 {
    @apply mb-5 text-6xl font-bold text-yellow-100 md:text-6xl lg:text-[78px] xl:text-8xl 2xl:text-[112px];
  }

  h2 {
    @apply mb-10 text-4xl font-bold;
  }

  h3 {
    @apply mb-5 text-3xl;
  }

  h4 {
    @apply text-2xl font-bold;
  }

  h6 {
    @apply text-sm font-bold;
  }

  p {
    @apply mb-0;
  }

  img {
    @apply h-auto w-full;
  }

  .container {
    @apply mx-auto px-10;
  }

  .button {
    @apply relative z-[1] inline-block w-fit overflow-hidden rounded-xl bg-amber-400 py-3 px-10 text-gray-900 transition-all duration-300;
    text-decoration: none;
  }

  .button:hover {
    @apply text-green-50;
  }

  .button::after {
    @apply absolute left-0 top-0 z-[-1] h-full w-full origin-top-right scale-x-0 scale-y-100 rounded-xl bg-green-600 transition-all duration-300 content-[''];
    transition: transform 500ms cubic-bezier(0.86, 0, 0.07, 1);
    transition-timing-function: cubic-bezier(0.86, 0, 0.07, 1);
  }

  .button:hover::after {
    @apply origin-top-left scale-x-100 scale-y-100;
  }

  .tech-stack-logo {
    @apply h-full w-28 fill-gray-600 md:w-[200px] xl:w-28;
  }

  .social-icons {
    @apply h-full w-auto;
  }
}

h1 strong {
  color: #151515;
}

strong {
  color: rgba(246, 219, 16, 1);
}

#intro-section,
#testimonials-section,
.project-image {
  background: linear-gradient(
    45deg,
    rgb(49, 45, 80) 0%,
    rgba(27, 120, 55, 1) 50%,
    rgba(246, 219, 16, 1) 100%
  );
}

#about-section strong,
#portfolio-section strong {
  color: rgba(27, 120, 55, 1);
}

#about-section h2 {
  margin-bottom: 0;
}

.nav-bar {
  position: fixed;
  z-index: 100;
  color: #fff;
  background: transparent;
  transition: background 0.5s;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 0 20px 0 20px;
}
.nav-bar h1 {
  color: #fff;
  font-family: "Orbitron", sans-serif;
  font-size: 30px;
}
.show h1 {
  color: #151515;
}

.show {
  background: #fff;
  color: #151515;
}

